works with modern env!

--- a/episodic-transformer-memory-ppo/requirements.txt
+++ b/episodic-transformer-memory-ppo/requirements.txt
@@ -1,11 +1,11 @@
-docopt==0.6.2
-einops==0.4.1
-gym==0.18.3
-gym-minigrid==1.0.2
+docopt
+einops
+gym
+gym-minigrid
 matplotlib
 memory-gym
-protobuf==3.20.3
-reprint==0.6.0
+protobuf
+reprint
 ruamel.yaml
 tblib
-tensorboard==2.0.2
+tensorboard
