--- a/episodic-transformer-memory-ppo/configs/cartpole.yaml
+++ b/episodic-transformer-memory-ppo/configs/cartpole.yaml
@@ -11,7 +11,8 @@ value_loss_coefficient: 0.2
 hidden_layer_size: 128
 max_grad_norm: 0.5
 transformer:
-    num_blocks: 4
+    ttt_layers: 4
+    num_blocks: 1
     embed_dim: 128
     num_heads: 1
     memory_length: 32
