--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,106 @@
-absl-py==1.4.0 ; python_version >= "3.8" and python_version < "3.11"
-appdirs==1.4.4 ; python_version >= "3.8" and python_version < "3.11"
-cachetools==5.3.0 ; python_version >= "3.8" and python_version < "3.11"
-certifi==2023.5.7 ; python_version >= "3.8" and python_version < "3.11"
-charset-normalizer==3.1.0 ; python_version >= "3.8" and python_version < "3.11"
-click==8.1.3 ; python_version >= "3.8" and python_version < "3.11"
-cloudpickle==2.2.1 ; python_version >= "3.8" and python_version < "3.11"
-colorama==0.4.4 ; python_version >= "3.8" and python_version < "3.11"
-commonmark==0.9.1 ; python_version >= "3.8" and python_version < "3.11"
-cycler==0.11.0 ; python_version >= "3.8" and python_version < "3.11"
-decorator==4.4.2 ; python_version >= "3.8" and python_version < "3.11"
-docker-pycreds==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
-docstring-parser==0.15 ; python_version >= "3.8" and python_version < "3.11"
-farama-notifications==0.0.4 ; python_version >= "3.8" and python_version < "3.11"
-filelock==3.12.0 ; python_version >= "3.8" and python_version < "3.11"
-fonttools==4.38.0 ; python_version >= "3.8" and python_version < "3.11"
-gitdb==4.0.10 ; python_version >= "3.8" and python_version < "3.11"
-gitpython==3.1.31 ; python_version >= "3.8" and python_version < "3.11"
-google-auth-oauthlib==0.4.6 ; python_version >= "3.8" and python_version < "3.11"
-google-auth==2.18.0 ; python_version >= "3.8" and python_version < "3.11"
-grpcio==1.54.0 ; python_version >= "3.8" and python_version < "3.11"
-gym-notices==0.0.8 ; python_version >= "3.8" and python_version < "3.11"
-gym==0.23.1 ; python_version >= "3.8" and python_version < "3.11"
-gymnasium==0.28.1 ; python_version >= "3.8" and python_version < "3.11"
-huggingface-hub==0.11.1 ; python_version >= "3.8" and python_version < "3.11"
-idna==3.4 ; python_version >= "3.8" and python_version < "3.11"
-imageio-ffmpeg==0.3.0 ; python_version >= "3.8" and python_version < "3.11"
-imageio==2.28.1 ; python_version >= "3.8" and python_version < "3.11"
-importlib-metadata==5.2.0 ; python_version >= "3.8" and python_version < "3.10"
-jax-jumpy==1.0.0 ; python_version >= "3.8" and python_version < "3.11"
-kiwisolver==1.4.4 ; python_version >= "3.8" and python_version < "3.11"
-markdown==3.3.7 ; python_version >= "3.8" and python_version < "3.11"
-markupsafe==2.1.2 ; python_version >= "3.8" and python_version < "3.11"
-matplotlib==3.5.3 ; python_version >= "3.8" and python_version < "3.11"
-moviepy==1.0.3 ; python_version >= "3.8" and python_version < "3.11"
-numpy==1.24.4 ; python_version >= "3.8" and python_version < "3.11"
-oauthlib==3.2.2 ; python_version >= "3.8" and python_version < "3.11"
-packaging==23.1 ; python_version >= "3.8" and python_version < "3.11"
-pandas==1.3.5 ; python_version >= "3.8" and python_version < "3.11"
-pathtools==0.1.2 ; python_version >= "3.8" and python_version < "3.11"
-pillow==9.5.0 ; python_version >= "3.8" and python_version < "3.11"
-proglog==0.1.10 ; python_version >= "3.8" and python_version < "3.11"
-protobuf==3.20.3 ; python_version < "3.11" and python_version >= "3.8"
-psutil==5.9.5 ; python_version >= "3.8" and python_version < "3.11"
-pyasn1-modules==0.3.0 ; python_version >= "3.8" and python_version < "3.11"
-pyasn1==0.5.0 ; python_version >= "3.8" and python_version < "3.11"
-pygame==2.1.0 ; python_version >= "3.8" and python_version < "3.11"
-pygments==2.15.1 ; python_version >= "3.8" and python_version < "3.11"
-pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.11"
-python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.11"
-pytz==2023.3 ; python_version >= "3.8" and python_version < "3.11"
-pyyaml==6.0.1 ; python_version >= "3.8" and python_version < "3.11"
-requests-oauthlib==1.3.1 ; python_version >= "3.8" and python_version < "3.11"
-requests==2.30.0 ; python_version >= "3.8" and python_version < "3.11"
-rich==11.2.0 ; python_version >= "3.8" and python_version < "3.11"
-rsa==4.7.2 ; python_version >= "3.8" and python_version < "3.11"
-sentry-sdk==1.22.2 ; python_version >= "3.8" and python_version < "3.11"
-setproctitle==1.3.2 ; python_version >= "3.8" and python_version < "3.11"
-setuptools==67.7.2 ; python_version >= "3.8" and python_version < "3.11"
-shtab==1.6.4 ; python_version >= "3.8" and python_version < "3.11"
-six==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
-smmap==5.0.0 ; python_version >= "3.8" and python_version < "3.11"
-stable-baselines3==2.0.0 ; python_version >= "3.8" and python_version < "3.11"
-tenacity==8.2.3 ; python_version >= "3.8" and python_version < "3.11"
-tensorboard-data-server==0.6.1 ; python_version >= "3.8" and python_version < "3.11"
-tensorboard-plugin-wit==1.8.1 ; python_version >= "3.8" and python_version < "3.11"
-tensorboard==2.11.2 ; python_version >= "3.8" and python_version < "3.11"
-torch==1.12.1 ; python_version >= "3.8" and python_version < "3.11"
-tqdm==4.65.0 ; python_version >= "3.8" and python_version < "3.11"
-typing-extensions==4.5.0 ; python_version >= "3.8" and python_version < "3.11"
-tyro==0.5.10 ; python_version >= "3.8" and python_version < "3.11"
-urllib3==1.26.15 ; python_version >= "3.8" and python_version < "3.11"
-wandb==0.13.11 ; python_version >= "3.8" and python_version < "3.11"
-werkzeug==2.2.3 ; python_version >= "3.8" and python_version < "3.11"
-wheel==0.40.0 ; python_version >= "3.8" and python_version < "3.11"
-zipp==3.15.0 ; python_version >= "3.8" and python_version < "3.10"
+absl-py==1.4.0
+appdirs==1.4.4
+backports.shutil-get-terminal-size==1.0.0
+cachetools==5.3.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.4
+commonmark==0.9.1
+cycler==0.11.0
+decorator==4.4.2
+docker-pycreds==0.4.0
+docopt==0.6.2
+docstring-parser==0.15
+einops==0.8.1
+Farama-Notifications==0.0.4
+filelock==3.12.0
+fonttools==4.38.0
+fsspec==2025.5.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.18.0
+google-auth-oauthlib==0.4.6
+grpcio==1.54.0
+gym==0.26.2
+gym-minigrid==1.2.2
+gym-notices==0.0.8
+gymnasium==0.29.0
+huggingface-hub==0.31.4
+idna==3.4
+imageio==2.28.1
+imageio-ffmpeg==0.3.0
+jax-jumpy==1.0.0
+Jinja2==3.1.6
+kiwisolver==1.4.4
+Markdown==3.3.7
+MarkupSafe==2.1.2
+matplotlib==3.5.3
+memory-gym==1.0.2
+moviepy==1.0.3
+mpmath==1.3.0
+networkx==3.4.2
+numpy==1.24.4
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+oauthlib==3.2.2
+packaging==23.1
+pandas==1.3.5
+pathtools==0.1.2
+Pillow==9.5.0
+popgym==1.0.6
+proglog==0.1.10
+protobuf==3.20.3
+psutil==5.9.5
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pygame==2.4.0
+Pygments==2.15.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+PyYAML==6.0.1
+regex==2024.11.6
+reprint==0.6.0
+requests==2.30.0
+requests-oauthlib==1.3.1
+rich==11.2.0
+rsa==4.7.2
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+safetensors==0.5.3
+sentry-sdk==1.22.2
+setproctitle==1.3.2
+shtab==1.6.4
+six==1.16.0
+smmap==5.0.0
+sympy==1.14.0
+tblib==3.1.0
+tenacity==8.2.3
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tokenizers==0.21.1
+torch==2.7.0
+torch-tb-profiler==0.4.3
+tqdm==4.65.0
+transformers==4.52.2
+triton==3.3.0
+typing_extensions==4.13.2
+tyro==0.5.10
+urllib3==1.26.15
+wandb==0.13.11
+Werkzeug==2.2.3
