--- a/episodic-transformer-memory-ppo/configs/cartpole.yaml
+++ b/episodic-transformer-memory-ppo/configs/cartpole.yaml
@@ -11,7 +11,7 @@ value_loss_coefficient: 0.2
 hidden_layer_size: 128
 max_grad_norm: 0.5
 transformer:
-    ttt_layers: 4
+    ttt_layers: 2
     num_blocks: 1
     embed_dim: 128
     num_heads: 1
@@ -21,7 +21,7 @@ transformer:
     gtrxl: True
     gtrxl_bias: 0.0
 learning_rate_schedule:
-    initial: 3.0e-4
+    initial: 1.5e-4
     final: 3.0e-5
     power: 1.0
     max_decay_steps: 300
@@ -38,7 +38,7 @@ clip_range_schedule:
 
 bc_pretraining:
   enabled: true  # Set to true to enable BC pre-training
-  expert_data_path: "trajectories/mlp/CartPole-v1__ppo_mlp_expert__mlp__expert_trajectories_1000eps.pkl"
-  epochs: 50                
+  expert_data_path: "~/cs224r-proj/trajectories/mlp/CartPole-v1__ppo_mlp_expert__mlp__expert_trajectories_10000eps.pkl"
+  epochs: 10
   batch_size: 128           
   learning_rate: 0.0003     
